syntax = "proto3";

package proto;

option go_package = "github.com/isaqueveras/auth-microservice/proto";

// Command for generate protobuf
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/user.proto

service UserAuth {
  rpc RegisterUser (Register) returns (Message) {}
  rpc LoginUser (Login) returns (LoginRes) {}
}

// Register Fields for register user in database of application
message Register {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

// Login login user on application
message Login {
  string email = 1;
  string password = 2;
}

message Message {
  string message = 1; 
}

message LoginRes {
  string message = 1;
  string name = 2;
  string email = 3;
  string token = 4;
}